# System-Monitor-Experiment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
qml/: Debug.qml  Main.qml  qmldir
qml/components/: BottomNav.qml  CircularGauge.qml  DetailHeader.qml  InputField.qml  LineChart.qml  PartitionBar.qml  TabBar.qml  ToggleSwitch.qml  TopBar.qml
qml/pages/: CpuDetail.qml  Dashboard.qml  MemoryDetail.qml  NetworkDetail.qml  Settings.qml  StorageDetail.qml
qml/views/components/: BottomNav.qml  Button.qml  CardContainer.qml  CircularGauge.qml  ConfirmDialog.qml  CoreUsageBar.qml  DetailHeader.qml  InputField.qml  LineChart.qml  PartitionBar.qml  ProgressBar.qml  SpinBox.qml  TabBar.qml  ToggleSwitch.qml  TopBar.qml
qml/views/pages/: CpuDetail.qml  Dashboard.qml  MemoryDetail.qml  NetworkDetail.qml  Settings.qml  StorageDetail.qml
resources/: qml.qrc
src/: SettingsManager.cpp  SystemInfo.cpp  SystemInfo.h  main.cpp
src/common/: Constants.h  FileReader.cpp  FileReader.h  Logger.cpp  Logger.h
src/controller/: NavigationController.cpp  NavigationController.h  SystemController.cpp  SystemController.h
src/model/: CpuMonitor.cpp  CpuMonitor.h  GpuMonitor.cpp  GpuMonitor.h  MemoryMonitor.cpp  MemoryMonitor.h  NetworkMonitor.cpp  NetworkMonitor.h  SettingsManager.cpp  SettingsManager.h  StorageMonitor.cpp  StorageMonitor.h
src/monitors/: CpuMonitor.cpp  CpuMonitor.h  MemoryMonitor.cpp  MemoryMonitor.h  NetworkMonitor.cpp  NetworkMonitor.h  SettingsManager.h  StorageMonitor.cpp  StorageMonitor.h
src/utils/: FileReader.cpp  FileReader.h
views/components/: BottomNav.qml  Button.qml  CardContainer.qml  CoreUsageBar.qml  ProgressBar.qml  ToggleSwitch.qml
views/pages/: NetworkDetail.qml  StorageDetail.qml
